# ippi

./: .gitignore  ARCHITECTURE.md  Alpine_self-build_ro.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  LICENSE  Makefile  NEXT_STEPS.md  README.md  ROADMAP.md  build-with-podman.sh  build.rs  check_and_fix.py  check_status.txt  compile_test.sh  compose.yml  fix-ci-final.sh  fix-ci.sh  fix_warnings.sh  package-lock.json  package.json  podman-compose.sh  remove-docker.sh  run-p2p-example.sh  simple_test.rs  test_compile.rs  test_minimal.rs  test_rust_simple.rs  test_rustc.sh  test_simple.rs
.github/workflows/: ci.yml
config/: ippi.toml
docs/: P2P_NETWORKING.md
examples/: p2p_network.rs
frontend/: App.svelte  app.css  index.html  package-lock.json  package.json  vite.config.js
frontend-leptos/: Cargo.toml
frontend-leptos/src/: lib.rs
minimal_test/: Cargo.toml
minimal_test/src/: main.rs
scripts/: build-pi-zero.sh  dev.sh  fmt.sh  run_test.sh  test.sh
src/: config.rs  error.rs  hardware.rs  lib.rs  main.rs  minimal.rs  test_integration.rs
src/cloud_init/: mod.rs
src/dht/: mod.rs
src/kvm/: mod.rs
src/p2p/: mod.rs
src/tunnel/: mod.rs  tun_impl.rs
src/utils/: mod.rs
src/web/: assets.rs  mod.rs
src/web/api/: config.rs  kvm.rs  mod.rs  p2p.rs
src/webrtc/: mod.rs
tests/: config_tests.rs  utils_tests.rs  web_tests.rs
