[package]
name = "ippi"
version = "0.1.0"
description = "Lightweight P2P KVM-over-IP in Rust for Raspberry Pi"
authors = ["IPPI Team <team@ippi.rs>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ippi-rs/ippi"
readme = "README.md"
edition = "2024"
rust-version = "1.91"

[features]
default = ["frontend-embedded"]
frontend-embedded = ["rust-embed"]  # Frontend embebido en binario
frontend-external = []              # Frontend servido externamente

# Para Pi Zero W (ARMv6)
pi-zero = ["rppal", "rusb"]

# Redes P2P completas
p2p-full = ["libp2p", "snow", "tun"]

# Para hardware específico
with-usb = ["rusb"]
with-gpio = ["rppal"]
# Feature aliases para compatibilidad con el codigo
kvm = ["kvm-ioctls"]
p2p = ["p2p-full"]
cloud_init = []
hardware = ["with-gpio", "with-usb"]

[dependencies]
# Core
tokio = { version = "1.50", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.22", features = ["v4", "serde"] }

# Web server
axum = { version = "0.8", features = ["ws", "macros"] }
hyper = "1.8"
clap = { version = "4.6", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1.4"
mime = "0.3"
mime_guess = "2.0"

# Frontend embedding
rust-embed = { version = "8.11", optional = true }

# P2P Networking (opcional)
libp2p = { version = "0.56", optional = true, features = ["kad", "noise", "tcp", "dns", "websocket", "yamux", "ping"] }
snow = { version = "0.10", optional = true }
tun = { version = "0.8", optional = true }

# DHT (Distributed Hash Table) - usando una implementación simple
# Nota: En producción, usaríamos libp2p-kad que ya incluye DHT

# KVM Hypervisor (opcional)
kvm-ioctls = { version = "0.24", optional = true }
virtio-bindings = { version = "0.2", optional = true }

# WebRTC (opcional)
webrtc = { version = "0.17", optional = true }

# Hardware (opcional)
rusb = { version = "0.9", optional = true }
rppal = { version = "0.22", optional = true }

[build-dependencies]
# variable -> vergen-gitcl = { version = "9", features = ["build", "cargo", "rustc", "gitcl"] }
vergen = { version = "9", features = ["build", "cargo", "rustc"] }
vergen-gitcl = { version = "9", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tokio = { version = "1.50", features = ["full", "rt-multi-thread"] }
tempfile = "3.27"

[[example]]
name = "p2p_network"
required-features = ["p2p", "tun"]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = "z"           # Optimize for size
lto = true                # Link Time Optimization
codegen-units = 1         # Better optimization
panic = "abort"           # No unwinding (smaller binary)
strip = true              # Strip symbols
debug = false
rpath = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[workspace]
members = ["."]
resolver = "2"
